log/build_2025-04-20_22-50-23/eco_move/stderr.log
  File "/home/ws/cs1699-EcoBot/install/eco_move/lib/python3.10/site-packages/eco_move/move.py", line 47
    turning_rad, distance_to_move = ugv_mover.calculate_angle_and_distance(>
                                                                           ^
SyntaxError: invalid syntax

